[package]
name = "blobstore"
version = "0.1.1"
description = "content addressable blob store"
keywords = ["blob", "store", "content", "addressable", "hash"]
repository = "https://github.com/scttnlsn/blobstore"
authors = ["Scott Nelson <scott@scottnelson.co>"]
license = "MIT/Apache-2.0"

[dependencies]
rust-crypto = "^0.2"
tempfile = "2.2.0"
